# Software-Engineering-Sudoku

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qq.bat
docs/: 覆盖率.md  质量分析.md
docs/coverage/: test.txt
docs/user-manual/: 用户手册.md
include/: Board.h  Generator.h  Solver.h
resource/: 1-sudoku.txt  10-level3-problems.txt  10-level3-solution.txt  1000-problems.txt  20-[20,55]-problems.txt  20-u-problems.txt  20-u-solution.txt  game.txt  solution.txt  test.bat  test_en.bat
src/: Board.cpp  Generator.cpp  Solver.cpp  main.cpp
